Add code review documents to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,10 @@ bin/
 .profile
 .bash_history
 .zsh_history
+
+# Code review and analysis documents (should not be committed)
+CODE_REVIEW.md
+*_REVIEW.md
+*_review.md
+REVIEW*.md
+review*.md
