Feature/add command line help (#6)
* Add command-line help functionality (-h, --help flags)

* Add personal shell config files to .gitignore

* Add code review documents to .gitignore

* Add banner image to README

* Add GitHub-style icons and improve README banner display

* Add social preview image

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,18 @@ bin/
 *.swp
 .idea/
 .vscode/
+
+# Personal shell configuration files (should not be committed)
+.bash_profile
+.bashrc
+.zshrc
+.profile
+.bash_history
+.zsh_history
+
+# Code review and analysis documents (should not be committed)
+CODE_REVIEW.md
+*_REVIEW.md
+*_review.md
+REVIEW*.md
+review*.md
