feat: harden Dockerfile for improved security
Changes:
- Use distroless base image (no shell, no package manager)
- Add HEALTHCHECK instruction for container orchestration
- Use official golang:1.24-alpine for builder (faster builds)
- Add build args for version injection in Docker builds
- Create .dockerignore to reduce build context size
- Add OCI labels for container metadata
- Simplify build process (remove manual Go download)

Security improvements:
- Minimal attack surface with distroless
- Non-root execution (nonroot user from distroless)
- Static binary with no external dependencies
- No shell access in final image

Closes #9

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -64,6 +64,13 @@ jobs:
             type=semver,pattern={{major}}
             type=raw,value=latest
 
+      - name: Get version info
+        id: version
+        run: |
+          echo "version=${GITHUB_REF_NAME#v}" >> $GITHUB_OUTPUT
+          echo "commit=${GITHUB_SHA::8}" >> $GITHUB_OUTPUT
+          echo "build_time=$(date -u +%Y-%m-%dT%H:%M:%SZ)" >> $GITHUB_OUTPUT
+
       - name: Build and push Docker image
         uses: docker/build-push-action@v6
         with:
@@ -72,5 +79,9 @@ jobs:
           platforms: linux/amd64,linux/arm64
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+          build-args: |
+            VERSION=${{ steps.version.outputs.version }}
+            GIT_COMMIT=${{ steps.version.outputs.commit }}
+            BUILD_TIME=${{ steps.version.outputs.build_time }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
