feat: add SSL/TLS configuration for database connections
Closes #54

Add a simple `ssl` configuration option for database connections to enable
encrypted connections to MySQL servers without manually editing DSN strings.

Configuration options:
- ssl: "true" - Enable TLS with certificate verification
- ssl: "false" - Disable TLS (default)
- ssl: "skip-verify" - Enable TLS without cert verification (self-signed)
- ssl: "preferred" - Use TLS if available, fall back to unencrypted

Supports both config file and environment variables:
- MYSQL_SSL for global setting
- MYSQL_DSN_N_SSL for per-connection override

Changes:
- Add SSL field to ConnectionConfig and FileConnectionConfig structs
- Add ApplySSLToDSN helper function to modify DSN based on SSL setting
- Update loadConnections to support MYSQL_SSL environment variable
- Update ConnectionManager to apply SSL settings when opening connections
- Add comprehensive tests for SSL functionality
- Update README and example config with SSL documentation

--- a/examples/config.yaml
+++ b/examples/config.yaml
@@ -14,12 +14,16 @@ connections:
   default:
     dsn: "root:password@tcp(localhost:3306)/mydb?parseTime=true"
     description: "Local development database"
+    # ssl: "true"           # Enable TLS with certificate verification
+    # ssl: "skip-verify"    # Enable TLS without certificate verification (self-signed certs)
+    # ssl: "preferred"      # Use TLS if available, fall back to unencrypted
   
   # Additional connections (optional)
   # production:
   #   dsn: "readonly:pass@tcp(prod-server:3306)/prod?parseTime=true"
   #   description: "Production database (read-only)"
   #   read_only: true
+  #   ssl: "true"           # Recommended for production connections
 
 # Query settings
 query:
